--- a/Package.swift.toml
+++ b/Package.swift.toml
@@ -12,6 +12,11 @@ supported = [ "\"14.0\"" ]
 
 # Services
 
+[services.FileManager]
+[services.FileManager.interface]
+dependencies = [ "Dependencies", "DependenciesMacros" ]
+
+[services.Pasteboard]
 [services.Pasteboard.interface]
 dependencies = [ "Dependencies", "DependenciesMacros" ]
 
@@ -19,10 +24,12 @@ dependencies = [ "Dependencies", "DependenciesMacros" ]
 
 [libraries.Equatable]
 
-# Dependencies
+# Dependency Versions
 
 [versionRefs.Dependencies]
 from = "1.2.2"
+
+# Dependencies
 
 [dependencies.Dependencies]
 url = "https://github.com/pointfreeco/swift-dependencies.git"
