--- a/Package.swift.toml
+++ b/Package.swift.toml
@@ -24,6 +24,12 @@ dependencies = [ "Dependencies", "DependenciesMacros" ]
 
 [libraries.Equatable]
 
+[libraries.Extensions]
+
+[libraries.SwiftUIExtensions]
+[libraries.SwiftUIExtensions.tests]
+dependencies = [ "SnapshotTesting" ]
+
 # Dependency Versions
 
 [versionRefs.Dependencies]
@@ -38,3 +44,8 @@ versionRef = "Dependencies"
 [dependencies.DependenciesMacros]
 url = "https://github.com/pointfreeco/swift-dependencies.git"
 versionRef = "Dependencies"
+
+[dependencies.SnapshotTesting]
+suitable_for_dependents_matching = "\\w+Tests$"
+url = "https://github.com/pointfreeco/swift-snapshot-testing.git"
+from = "1.16.0"
