--- a/Package.swift.toml
+++ b/Package.swift.toml
@@ -12,6 +12,13 @@ supported = [ "\"14.0\"" ]
 
 # Services
 
+[services.Analytics.interface]
+dependencies = [ "Dependencies", "DependenciesMacros" ]
+[services.TelemetryDeckAnalytics]
+skip_interface = true
+services = [ "Analytics", "Bundle", "UserDefaults" ]
+dependencies = [ "TelemetryClient" ]
+
 [services.Bundle]
 skip_tests = true
 [services.Bundle.interface]
@@ -61,3 +68,7 @@ versionRef = "Dependencies"
 suitable_for_dependents_matching = "\\w+Tests$"
 url = "https://github.com/pointfreeco/swift-snapshot-testing.git"
 from = "1.16.0"
+
+[dependencies.TelemetryClient]
+url = "https://github.com/TelemetryDeck/SwiftClient.git"
+from = "1.5.1"
