--- a/Package.swift.toml
+++ b/Package.swift.toml
@@ -17,7 +17,7 @@ dependencies = [ "Dependencies", "DependenciesMacros" ]
 [services.TelemetryDeckAnalyticsPackage]
 skip_interface = true
 services = [ "AnalyticsPackage", "BundlePackage", "UserDefaultsPackage" ]
-dependencies = [ "TelemetryClient" ]
+dependencies = [ "TelemetryDeck" ]
 
 [services.AppInfoPackage]
 services = [ "BundlePackage", "UserDefaultsPackage" ]
@@ -130,6 +130,6 @@ suitable_for_dependents_matching = "\\w+Tests$"
 url = "https://github.com/pointfreeco/swift-snapshot-testing.git"
 from = "1.16.0"
 
-[dependencies.TelemetryClient]
-url = "https://github.com/TelemetryDeck/SwiftClient.git"
-from = "1.5.1"
+[dependencies.TelemetryDeck]
+url = "https://github.com/TelemetryDeck/SwiftSDK.git"
+from = "2.2.1"
