--- a/Package.swift.toml
+++ b/Package.swift.toml
@@ -40,7 +40,7 @@ dependencies = [ "Dependencies", "DependenciesMacros" ]
 services = [ "FileManagerPackage" ]
 [services.GRDBDatabasePackage.interface]
 libraries = [ "GRDBDatabasePackage" ]
-dependencies = [ "ConcurrencyExtras", "Dependencies", "DependenciesMacros" ]
+dependencies = [ "ConcurrencyExtras", "Dependencies", "DependenciesMacros", "Harmony" ]
 [services.GRDBDatabasePackage.tests]
 libraries = [ "TestUtilitiesPackage" ]
 
@@ -127,6 +127,9 @@ from = "1.1.0"
 [dependencies.GRDB]
 url = "https://github.com/groue/GRDB.swift.git"
 from = "6.25.0"
+
+[dependencies.Harmony]
+path = "../Harmony"
 
 [dependencies.Sentry]
 url = "https://github.com/getsentry/sentry-cocoa.git"
