--- a/Package.swift.toml
+++ b/Package.swift.toml
@@ -129,7 +129,8 @@ url = "https://github.com/groue/GRDB.swift.git"
 from = "6.25.0"
 
 [dependencies.Harmony]
-path = "../Harmony"
+url = "https://github.com/autoreleasefool/Harmony.git"
+branch = "jroque-9-string-id"
 
 [dependencies.Sentry]
 url = "https://github.com/getsentry/sentry-cocoa.git"
