--- a/Package.swift.toml
+++ b/Package.swift.toml
@@ -126,7 +126,7 @@ from = "1.2.0"
 
 [dependencies.GRDB]
 url = "https://github.com/groue/GRDB.swift.git"
-from = "6.29.3"
+revision = "ed5f8c11ab53a4df0f882f1045c65aab59193611"
 
 [dependencies.Sentry]
 url = "https://github.com/getsentry/sentry-cocoa.git"
