--- a/Package.swift.toml
+++ b/Package.swift.toml
@@ -104,39 +104,31 @@ skip_tests = true
 
 # Dependency Versions
 
-[shared.refs.Dependencies]
-url = "https://github.com/pointfreeco/swift-dependencies.git"
-from = "1.4.1"
+[shared.refs]
+AsyncAlgorithms = { url = "https://github.com/apple/swift-async-algorithms.git", from = "1.0.0" }
+Dependencies = { url = "https://github.com/pointfreeco/swift-dependencies.git", from = "1.6.3"}
+ConcurrencyExtras = { url = "https://github.com/pointfreeco/swift-concurrency-extras.git", from = "1.3.1" }
+GRDB = { url = "https://github.com/groue/GRDB.swift.git", from = "7.0.0" }
+Sentry = { url = "https://github.com/getsentry/sentry-cocoa.git", from = "8.43.0" }
+SnapshotTesting = { url = "https://github.com/pointfreeco/swift-snapshot-testing.git", from = "1.17.7" }
+TelemetryDeck = { url = "https://github.com/TelemetryDeck/SwiftSDK.git", from = "2.7.0" }
 
 # Dependencies
 
 [dependencies.AsyncAlgorithms]
-url = "https://github.com/apple/swift-async-algorithms.git"
-from = "1.0.0"
-
+dep_ref = "AsyncAlgorithms"
 [dependencies.Dependencies]
 dep_ref = "Dependencies"
-
 [dependencies.DependenciesMacros]
 dep_ref = "Dependencies"
-
 [dependencies.ConcurrencyExtras]
-url = "https://github.com/pointfreeco/swift-concurrency-extras.git"
-from = "1.2.0"
-
+dep_ref = "ConcurrencyExtras"
 [dependencies.GRDB]
-url = "https://github.com/groue/GRDB.swift.git"
-from = "6.29.3"
-
+dep_ref = "GRDB"
 [dependencies.Sentry]
-url = "https://github.com/getsentry/sentry-cocoa.git"
-from = "8.21.0"
-
+dep_ref = "Sentry"
 [dependencies.SnapshotTesting]
 suitable_for_dependents_matching = "\\w+Tests$"
-url = "https://github.com/pointfreeco/swift-snapshot-testing.git"
-from = "1.17.5"
-
+dep_ref = "SnapshotTesting"
 [dependencies.TelemetryDeck]
-url = "https://github.com/TelemetryDeck/SwiftSDK.git"
-from = "2.2.1"
+dep_ref = "TelemetryDeck"
